--- a/app/index.html
+++ b/app/index.html
@@ -5,8 +5,9 @@
   </head>
   <body>
     <h1>Random String Generator</h1>
-    <button id="generate">Generate a String!</button>
-    <div id="string"></div>
+    <button id="quote">Generate a Quote!</button>
+    <button id="joke">Generate a Joke!</button>
+    <p id="ajax-text"></p>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js" type="text/javascript"></script>
     <script src="script.js" type="text/javascript"></script>
   </body>
