--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
     <h1>Random String Generator</h1>
     <button id="quote">Generate a Quote!</button>
     <button id="joke">Generate a Joke!</button>
+    <button id="getCat">Get a Cat!</button>
     <p id="ajax-text"></p>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js" type="text/javascript"></script>
     <script src="script.js" type="text/javascript"></script>
