--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,10 @@
     </form>
     <p>Your name in pig latin is:</p>
     <p id="piglatinified"></p>
-
+    <h1>Random String Generator</h1>
+    <p id="ajax-text"></p>
+    <button id="quote">Get a Quote</button>
+    <button id="joke">Get a Joke</button>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js" type="text/javascript"></script>
     <script src="script.js" type="text/javascript"></script>
   </body>
