added cat object get

--- a/app/index.html
+++ b/app/index.html
@@ -14,8 +14,9 @@
     <p id="piglatinified"></p>
     <h1>Random String Generator</h1>
     <p id="ajax-text"></p>
-    <button id="quote">Get a Quote</button>
-    <button id="joke">Get a Joke</button>
+    <button id="quote">Get a Quote!</button>
+    <button id="joke">Get a Joke!</button>
+    <button id="cat">Get a Cat!</button>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js" type="text/javascript"></script>
     <script src="script.js" type="text/javascript"></script>
   </body>
