added 'speak like a beatnik' form

--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,13 @@
     </form>
     <p>Your name in pig latin is:</p>
     <p id="piglatinified"></p>
+
+    <h1>Speak like a Beatnik</h1>
+    <form id="append-cat">
+      <label>Type your string here </label><input type="text" name="catstring">
+      <input type="submit" value="Speak like a Beatnik">
+    </form>
+    <p id="catified"></p>
     <h1>Random String Generator</h1>
     <p id="ajax-text"></p>
     <button id="quote">Get a Quote!</button>
